# lau-supergeometry

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent_state.rs  berezin.rs  exterior.rs  graded.rs  lib.rs  super_lie.rs  superalgebra.rs  supercommutator.rs  superform.rs  supermanifold.rs  supervector.rs  symmetric.rs
